--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,14 @@
     "homepage": "https://github.com/omnitask/cryptopaymentapi",
     "keywords": ["Laravel", "CryptoPaymentAPI"],
     "require": {
-        "illuminate/support": "~5"
+        "illuminate/support": "~5",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
         "mockery/mockery": "^1.1",
         "orchestra/testbench": "~3.0",
         "sempro/phpunit-pretty-print": "^1.0"
-    },
-    "require": {
-        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "psr-4": {
